Fixed overflow for calendar monthview with a lot of events.

--- a/src/global.scss
+++ b/src/global.scss
@@ -422,6 +422,12 @@ ion-toolbar {
   color: #000000 !important
 }
 
+.monthview-container {
+  height: 100%;
+  overflow: scroll;
+  scrollbar-width: none;
+}
+
 .calendar-hour-column, .weekview-header {
   border: 0px !important;
 }
